Add custom component ProgressBar (dynamic import from config file => managed by moustache template engine) in ServicesPageBlock1 component, Remove unnecessary dependencies in package.json, Add script entries in package.json and Remove bundle.js from repository

--- a/css/style.css
+++ b/css/style.css
@@ -266,3 +266,25 @@ ol.progtrckr li.progtrckr-done:before {
 ol.progtrckr li.progtrckr-done:hover:before {
   color: #333;
 }
+
+/* Subscriptions custom CSS */
+#cancelButtonModalSpanEden{
+  font-size: 35px;
+  margin-right: 30px;
+}
+
+#cancelButtonModalSpanDva{
+  margin-right: 50px;
+}
+
+#divItemSubscription{
+  padding-left: 10px;
+}
+
+#headingSubscription{
+  font-weight: bold;
+}
+
+#spanBalance{
+  font-size: 20px;
+}
