--- a/css/style.css
+++ b/css/style.css
@@ -354,3 +354,47 @@ ol.progtrckr li.progtrckr-done:hover:before {
   width: 100%;
   border: solid black 5px;
 }
+
+/* Sidebar custom CSS */
+.sidebarl {
+    display: flex;
+    background-color: #f5f5f5;
+    border-right: 1px solid #dddddd;
+    border-left: 1px solid #dddddd;
+    border-top: 1px solid #dddddd;
+}
+
+ul.left-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: block;
+    width: 100%;
+}
+
+ul.left-menu li {
+    display: list-item;
+    margin: 0;
+    padding: 0;
+}
+
+ul.left-menu a {
+    color: #555;
+    text-decoration: none;
+    display: block;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 10px;
+    border-bottom: 1px solid #ddd;
+    font-size: 13px;
+}
+
+ul.left-menu a.active {
+    box-shadow: 0px 0px 3px #8C8984 inset;
+    background: #e0e0e0;
+}
+
+/* Navbar custom CSS*/
+
+
+
